Bug 1818950 - Use the original BrowsingContext ID in `remote-content-blocked` notification. r=Standard8

Differential Revision: https://phabricator.services.mozilla.com/D177715

--HG--
extra : moz-landing-system : lando